--- a/index.html
+++ b/index.html
@@ -33,11 +33,25 @@
             <button type="button" class="btn btn-primary mt-3 d-none" id="generatePuzzleButton">Generate Puzzle</button>
             <button type="button" class="btn btn-primary mt-3 d-none" id="downloadImageBtn" onclick="downloadimage()">Download Grid</button>
 
-            <div class="form-group  mt-3 d-one" id="generatePuzzleButton">
-                <input type="file" class="btn btn-primary form-control-file" id="exampleFormControlFile1">
+            <div class="form-group mt-3" id="addYourOwnBackgroundButton">
+                <input type="file" class="btn btn-primary form-control-file" id="backgroundImageInput">
+            </div>
+
+            <div class="form-group">
+                <label for="themeRadio">Theme:</label>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="themeRadio" id="lightThemeRadio" value="light" checked>
+                    <label class="form-check-label" for="lightThemeRadio">Light</label>
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="themeRadio" id="darkThemeRadio" value="dark">
+                    <label class="form-check-label" for="darkThemeRadio">Dark</label>
+                </div>
             </div>
 
         </form>
+
+
 
         <div id="puzzleGrid" class="mt-3"></div>
 
