--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Zebra Puzzle Generator</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -31,10 +31,11 @@
             <div id="inputsContainer"></div>
 
             <button type="button" class="btn btn-primary mt-3 d-none" id="generatePuzzleButton">Generate Puzzle</button>
-            <button type="button" class="btn btn-primary mt-3 d-none" id="downloadImageBtn" onclick="downloadimage()">Download Grid</button>
+            <button type="button" class="btn btn-primary mt-3 d-none" id="downloadImageBtn" onclick="downloadImage()">Download Grid</button>
 
-            <div class="form-group mt-3" id="addYourOwnBackgroundButton">
-                <input type="file" class="btn btn-primary form-control-file" id="backgroundImageInput">
+
+            <div class="input-group mt-3" id="addYourOwnBackgroundButton">
+                <input type="file" class="form-control" id="backgroundImageInput" aria-describedby="backgroundImageInput" aria-label="Upload">
             </div>
 
             <div class="form-group">
@@ -56,7 +57,7 @@
         <div id="puzzleGrid" class="mt-3"></div>
 
     </div>
-    <script src="https://html2canvas.hertzen.com/dist/html2canvas.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/dom-to-image/2.6.0/dom-to-image.min.js"></script>
     <script src="script.js"></script>
 </body>
 
