Add mobile version under construction

--- a/index.html
+++ b/index.html
@@ -11,7 +11,14 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="mobile-message d-md-none">
+        <div class="message-text">
+            <p>Greetings, esteemed visitor!</p>
+            <p>We apologize for the inconvenience, but the mobile version is currently under construction. Please utilize your desktop device in the meantime for optimal browsing experience.</p>
+        </div>
+    </div>
+
+    <div class="container d-none d-md-block">
         <h1 class="mt-4">Zebra Puzzle Generator</h1>
 
         <form id="puzzleForm">
