--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </div>
 
             <div class="form-group">
-                <label for="themeRadio">Theme:</label>
+                <label>Theme:</label>
                 <div class="form-check">
                     <input class="form-check-input" type="radio" name="themeRadio" id="lightThemeRadio" value="light" checked>
                     <label class="form-check-label" for="lightThemeRadio">Light</label>
