Remove margin top

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 
 
-        <div id="puzzleGrid" class="mt-3"></div>
+        <div id="puzzleGrid"></div>
 
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/dom-to-image/2.6.0/dom-to-image.min.js"></script>
